<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/answer_edit_text_background"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/answer_edit_text_background"/>

    <RadioGroup
        android:id="@+id/roleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/studentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:minHeight="48dp"
            android:padding="8dp"/>

        <RadioButton
            android:id="@+id/lecturerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecturer"
            android:minHeight="48dp"
            android:padding="8dp"/>

        <RadioButton
            android:id="@+id/adminRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administrator"
            android:minHeight="48dp"
            android:padding="8dp"/>

    </RadioGroup>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:background="@drawable/answer_edit_text_background"/>

    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_500"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/purple_500"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/resendVerificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_email"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="@drawable/answer_edit_text_background"/>

</LinearLayout>
