<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">
    <!--android:background="@drawable/im15"-->

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/answer_edit_text_background"
        android:autofillHints="email"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:autofillHints="Password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/answer_edit_text_background"/>


    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirm_password"
        android:autofillHints="Confirm Password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/answer_edit_text_background"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/studentRoleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/lecturerRoleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecturer" />

        <RadioButton
            android:id="@+id/adminRoleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administrator" />
    </RadioGroup>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:background="@drawable/answer_edit_text_background"/>

</LinearLayout>
